[package]
name = "mila"
version = "0.1.2"
authors = ["thane98"]
edition = "2018"
description = "A library for interacting with common formats from FE9-FE15. "
license-file = "LICENSE"
repository = "https://github.com/thane98/mila/"

[dependencies]
thiserror = "1.0.20"
byteorder = "1.3.4"
encoding_rs = "0.8.20"
nintendo-lz = "0.1.3"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
maplit = "1.0.2"
pest = "2.1.3"

[dev-dependencies]
tempfile = "3.1.0"