[package]
name = "mila"
version = "0.1.4"
authors = ["thane98"]
edition = "2018"
description = "A library for interacting with common formats from FE9-FE15. "
license-file = "LICENSE"
repository = "https://github.com/thane98/mila/"

[dependencies]
thiserror = "1.0.20"
byteorder = "1.3.4"
encoding_rs = "0.8.20"
nintendo-lz = "0.1.3"
linked-hash-map = { version = "0.5.3" }
maplit = "1.0.2"
strum_macros = "0.19"
strum = "0.19"
regex = "1"
glob = "0.3.0"
dunce = "1.0.1"

[dev-dependencies]
tempfile = "3.1.0"
